# reidabot

./: Cargo.toml  README.md
locales/: EN.toml  TR.toml
src/: api.rs  config.rs  env.rs  error.rs  lib.rs  main.rs  prelude.rs  util.rs
